syntax = "proto3";
package global_scheduler_service;

message FnStats {
	fixed64 completed = 1;
	fixed64 pending = 2;

	fixed64 avg_dur_ms = 3;
	fixed64 avg_call_bytes = 4;
	fixed64 avg_ret_bytes = 5;
}

message Stats {
	fixed64 completed = 1;
	fixed64 pending = 2;

	fixed64 avg_dur_ms = 3;
	fixed64 avg_call_bytes = 4;
	fixed64 avg_ret_bytes = 5;

	map<string, FnStats> fn_stats = 6;
}

message RequestId {
	string address = 1;
	fixed64 request_id = 2;
}

message TaskFailure {
	fixed64 lifetime_id = 1;
	fixed64 task_id = 2;
	repeated RequestId requests = 3;
}

message RuntimeInfo {
	fixed64 lifetime_id = 1;
	Stats stats = 2;
	repeated TaskFailure task_failures = 3;
}

message TaskInfo {
	string address = 1;
	fixed64 lifetime_id = 2;
	fixed64 task_id = 3;
	optional fixed64 request_id = 4;
}

message ParentChildInfo {
	TaskInfo parent_info = 1;
	TaskInfo child_info = 2;
}

message HeartBeatRequest {
	fixed64 request_id = 1;
	string address = 2;
	RuntimeInfo current_runtime_info = 3;
	// TODO: async pass the ParentInfo into the d_store.
	// We need all nodes to see this before we remove failed
	// tasks. 
	// repeated ParentChildInfo parent_child_infos = 4;
}

message NotLeader {
	optional string leader_address = 1;
}

message HeartBeat {
	fixed64 lifetime_id = 1;
	fixed64 next_expected_request_id = 2;
	fixed64 heart_beat_timeout = 3;
	map<string, RuntimeInfo> address_to_runtime_info = 4;
	// TODO: Pass all call trees. 
}

message BadRequest {
	fixed64 lifetime_id = 1;
	fixed64 next_expected_request_id = 2;
}

message HeartBeatResponse {
	oneof heart_beat_response_type {
		NotLeader not_leader = 1;
		HeartBeat heart_beat = 2;
		BadRequest bad_request = 3;
	}
}

message RaftStepRequest {
	oneof inner {
		bytes msg = 1;
		bytes cc = 2;
	}
}

message RaftStepResponse {
}

service GlobalSchedulerService {
	rpc HeartBeat(HeartBeatRequest) returns (HeartBeatResponse);
	rpc RaftStep(RaftStepRequest) returns (RaftStepResponse);
}
